agent_solution/force-app/main/default/objects/Post_Visit_Log__c/Post_Visit_Log__c.object-meta.xml
<CustomObject>
    <label>Post Visit Log</label>
    <nameField>
        <displayFormat>PVL-{00000}</displayFormat>
        <label>Post Visit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Visit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>