agent_solution/force-app/main/default/objects/Post_Visit_Log__c/fields/Agent_Processed__c.field-meta.xml
<CustomField>
    <fullName>Agent_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Processed</label>
    <type>Checkbox</type>
</CustomField>