agent_solution/force-app/main/default/objects/Post_Visit_Log__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Post Visit Logs</relationshipLabel>
    <relationshipName>Post_Visit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>