agent_solution/force-app/main/default/objects/Post_Visit_Log__c/fields/Follow_Up_Summary__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Summary__c</fullName>
    <label>Follow Up Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>