agent_solution/force-app/main/default/objects/Post_Visit_Log__c/fields/Referral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Referral_Notes__c</fullName>
    <label>Referral Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>