agent_solution/force-app/main/default/objects/Post_Visit_Log__c/fields/Visit_Channel__c.field-meta.xml
<CustomField>
    <fullName>Visit_Channel__c</fullName>
    <label>Visit Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>